Fix some layout bugs

--- a/src/assets/css/elements.scss
+++ b/src/assets/css/elements.scss
@@ -48,7 +48,7 @@
 
 .widget-container {
   max-width: $container-max-width;
-  margin: 0 auto;
+  margin: 80px auto;
   box-shadow: $theme-emerald-shadow-container;
   border-radius: 0 0 5px 5px;
 
@@ -81,7 +81,7 @@
     position: absolute;
     width: 100%;
     height: 260px;
-    top: 0;
+    top: -80px;
     left: 0;
     background-image: $theme-emerald-gradient;
     z-index: -1;
